# tinytrace

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  cache_rpc_example.cpp  simple_example.cpp
include/tinytrace/: tinytrace.hpp
tests/: CMakeLists.txt  test_basic_span.cpp  test_multithreading.cpp  test_nested_spans.cpp
